# pitot

./: .travis.yml  Cargo.toml  DEVELOPING.md  INTEGRATION.md  README.md
src/: main.rs  utils.rs
src/pitot/: handle.rs  mod.rs
src/processor/: clock.rs  fisb.rs  gnss.rs  mod.rs  ownship.rs  traffic.rs
src/protocol/: gdl90.rs  mod.rs  websocket.rs
src/sensor/: mod.rs
src/sensor/barometer/: bmp280.rs  mod.rs
src/sensor/gnss/: fake.rs  mod.rs  ublox.rs
src/sensor/sdr/: es.rs  mod.rs  uat.rs
src/sensor/sdr/bindings/: libdump1090.rs  libdump978.rs  librtlsdr.rs  mod.rs
src/transport/: mod.rs  udp.rs
webui/: index.html
webui/js/: index.js
