[package]
name = "pitot"
description = "A customizable aviation information receiver"
version = "0.0.1"
authors = ["Datong Sun <dndx@idndx.com>"]
homepage = "http://pitot-rs.org"
repository = "https://github.com/dndx/pitot"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
chrono = "0.3"
log = "0.3.7"
env_logger = "0.3"
serial = "0.3.4"
nom = "^3.0"
time = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = "0.7.1"
libc = "0.2.23"
inotify = "0.4.1"
icmp = "0.1.5"
i2csensors = "0.1.*"
i2cdev-bmp280 = "0.1.*"
i2cdev = "0.3.1"
